app/assets/stylesheets/user.css.scss
// Place all the styles related to the User controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

*, *:before, *:after {box-sizing:  border-box !important;}

/* overwrite wrap background color for user pages */
#wrap {
  background-color: #eee;
}

.masonry-container {
  padding-top: 50px;
  padding-bottom: 140px;
  background-color: inherit;
}

.masonry {
 -moz-column-width: 13em;
 -webkit-column-width: 13em;
 -moz-column-gap: 1em;
 -webkit-column-gap: 1em; 
  
}

.masonry-item {
 display: inline-block;
 margin: 0 0 1em;
 width:  100%; 
 background:  #efefef;
 box-shadow: 2px 2px 4px 0 #7b7b7b;
}

.masonry-item img {
  width: 100%;
  height: auto;
}

.masonry-item-title {
  background-color: #fff;
  padding: 10px 14px;
  font-family: lato;
}

.masonry-item a {
  border: none;
  box-shadow: none;
}

